@@ -1,50 +1,31 @@
 package com.example.AuthenticationService.Entity;
 
-import jakarta.persistence.*;
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.Size;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
+import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
-@Getter
 @Setter
-@AllArgsConstructor
+@Getter
 @NoArgsConstructor
-@Entity
-@Table(name = "users", uniqueConstraints = {
-        @UniqueConstraint(columnNames = "username")
-})
+@AllArgsConstructor
 public class User implements UserDetails {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
-
-    @NotBlank
-    @Size(max = 50)
-    @Column(unique = true)
-    private String username;
-
-    @NotBlank
-    @Size(max = 120)
+    private String email;
     private String password;
+    private String firstName;
+    private String lastName;
 
-    public User(String username, String password) {
-        this.username = username;
-        this.password = password;
-    }
-
-    // UserDetails methods implementation
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // For simplicity, returning an empty list. Implement roles/authorities if needed.
-        return Collections.emptyList();
+        return List.of();
+    }
+
+    @Override
+    public String getUsername() {
+        return email;
     }
 }
